# CUDA_Template

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  kernels.cu  kernels.cuh  main.cpp
